# minimum_torque_ik

./: CMakeLists.txt  README.md  package.xml
include/: test_var.h
include/franka_panda_model/: franka_panda_model.h
include/ik_force/: franka_panda_model.h  ik_force.h  ik_optimization_var_constr_cost.h  robot_model.h
include/ik_force/optimization/: ik_optimization_var_constr_cost.h
include/ik_force/robot_model/: franka_panda_model.h
include/suhan_opt_ik_test/: ik_optimization_var_constr_cost.h
src/: franka_panda_model.cpp  ik_test.cpp
src/ik_force/: franka_panda_model.cpp  ik_force.cpp
src/ik_force/optimization/: ik_optimization_var_constr_cost.cpp
src/ik_force/robot_model/: franka_panda_model.cpp
test/: test_ik_force.cpp
