<?xml version="1.0"?>
<package format="2">
  <name>ik_force</name>
  <version>0.1.0</version>
  <description>The ik_force package</description>

  <maintainer email="psh117@snu.ac.kr">Suhan Park</maintainer>
  <license>LGPLv3</license>
  <author email="psh117@snu.ac.kr">Suhan Park</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>ifopt</depend>
  <test_depend>gtest</test_depend>

  <export>
  </export>
</package>
